# cpf

./: pyproject.toml  validaCPF-bottle.py  validaCPF.py  validaCPF_test.py  valida_CPF.py  valida_CPF_modo_texto.py  valida_CPF_test.py  valida_CPF_tkinter.py
