[tool.poetry]
name = "cpf"
version = "0.1.0"
description = "Projeto de CPF"
authors = ["Marco André Mendes <marcoandre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
tk = "^0.1.0"
bottle = "^0.12.23"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
